fix(blog.eembouz.com) fix overflow for page-wrapper

--- a/packages/ui/src/css/layout/layout.css
+++ b/packages/ui/src/css/layout/layout.css
@@ -41,6 +41,7 @@
 .page-wrapper {
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
   min-height: 100vh;
   width: 100%;
 }
